$Id$

2014-12-06  Christian Franke  <franke@computer.org>

	Makefile.am: Add quotes to parameters of INSTALL commands to allow path
	names with spaces (this is supported since automake 1.8).
	update-smart-drivedb.in: Add quotes to SMARTCTL variable (ticket #502).

2014-11-30  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Crucial/Micron RealSSD m4/C400/P400: C400 *MAM variant
	- Crucial/Micron MX100/M500/M510/M550/M600 Client SSDs: Rename,
	add Crucial M500/M550, Micron M600
	- SandForce Driven SSDs: ADATA SX900 (ticket #490), Mushkin Atlas
	- Intel 311/313 Series SSDs: Rename, add 311 Series

2014-11-30  Christian Franke  <franke@computer.org>

	drivedb.h: USB: Prolific PL2571, PL2771, PL2775 (0x067b:0x2.7.)
	(ticket #499).
	smartctl.8.in, smartd.conf.5.in: Update '-d usbprolific' documentation.

2014-11-29  Christian Franke  <franke@computer.org>

	smartctl.8.in, smartd.8.in, smartd.conf.5.in, update-smart-drivedb.8.in:
	Add package title to page header.  Move PACKAGE VERSION section to bottom
	of page.  Remove SVN ID section header.

2014-11-29  Tommy Vestermark  <tommy.vestermark@gmail.com>

	scsiata.cpp: Add DATA OUT support for Prolific (ticket #482).
	Add more ATA output registers.  SCT commands are now supported.

2014-11-29  Christian Franke  <franke@computer.org>

	os_win32.cpp: Add strnicmp() compatibility macro for newer Cygwin
	releases.

2014-11-16  Tommy Vestermark  <tommy.vestermark@gmail.com>

	drivedb.h: USB: Prolific PL2773 (0x067b:0x2773) (ticket #482).

2014-11-16  Christian Franke  <franke@computer.org>

	Create branches RELEASE_6_[1-3]_DRIVEDB with last drivedb.h file
	compatible with smartmontools 6.[1-3].

2014-11-10  Tommy Vestermark  <tommy.vestermark@gmail.com>

	scsiata.cpp: Add class usbprolific_device to support Prolific PL2773
	USB bridges (ticket #482).
	smartctl.8.in, smartd.conf.5.in: Document '-d usbprolific'.

2014-11-09  Roger Willcocks  <roger@filmlight.ltd.uk>
